# go-clean-architecture

./: .gitignore  BUILD.bazel  Gopkg.toml  LICENSE  Makefile  README.md  WORKSPACE  docker-compose.yml  workspace-status.sh
framework/: BUILD.bazel  const.go  service.go
framework/component/cloudstore/: BUILD.bazel  cloudstore.go
framework/component/natsbroker/: BUILD.bazel  natsbroker.go
framework/component/transport/http/: BUILD.bazel  http_server.go
framework/component/transport/rpc/: BUILD.bazel  rpc_server.go
framework/util/: BUILD.bazel  uuid.go  validation.go
service/consumer/: BUILD.bazel  main.go
service/consumer/handler/: BUILD.bazel  handler.go
service/consumer/usecase/: BUILD.bazel  handle_message.go
service/producer/: BUILD.bazel  main.go
service/producer/domain/: BUILD.bazel  message.go
service/producer/handler/: BUILD.bazel  handler.go  http.go  rpc.go  rpc_proto.proto
service/producer/repository/: BUILD.bazel  message.go
service/producer/usecase/: BUILD.bazel  get_messages.go  store_publish_message.go
service/shared/messaging/: BUILD.bazel  messages.proto  topics.go
