load("@bazel_gazelle//:def.bzl", "gazelle")
load("@io_bazel_rules_docker//container:container.bzl", "container_bundle")

gazelle(
    name = "gazelle",
    command = "fix",
    external = "vendored",
    prefix = "github.com/ubiqueworks/go-clean-architecture",
)

container_bundle(
    name = "package",
    images = {
        "go-clean-producer:latest": "//service/producer:image",
        "go-clean-consumer:latest": "//service/consumer:image",
    },
)
