load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "uuid.go",
        "validation.go",
    ],
    importpath = "github.com/ubiqueworks/go-clean-architecture/framework/util",
    visibility = ["//visibility:public"],
    deps = ["//vendor/github.com/google/uuid:go_default_library"],
)
