load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["handle_message.go"],
    importpath = "github.com/ubiqueworks/go-clean-architecture/service/consumer/usecase",
    visibility = ["//visibility:public"],
    deps = [
        "//service/shared/messaging:go_default_library",
        "//vendor/github.com/golang/protobuf/proto:go_default_library",
        "//vendor/github.com/nats-io/go-nats:go_default_library",
        "//vendor/github.com/rs/zerolog:go_default_library",
    ],
)
