load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["message.go"],
    importpath = "github.com/ubiqueworks/go-clean-architecture/service/producer/domain",
    visibility = ["//visibility:public"],
    deps = ["//vendor/cloud.google.com/go/datastore:go_default_library"],
)
