load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "messaging_proto",
    srcs = ["messages.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "messaging_go_proto",
    importpath = "github.com/ubiqueworks/go-clean-architecture/service/shared/messaging",
    proto = ":messaging_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "go_default_library",
    srcs = ["topics.go"],
    embed = [":messaging_go_proto"],
    importpath = "github.com/ubiqueworks/go-clean-architecture/service/shared/messaging",
    visibility = ["//visibility:public"],
)
