load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["http_server.go"],
    importpath = "github.com/ubiqueworks/go-clean-architecture/framework/component/transport/http",
    visibility = ["//visibility:public"],
    deps = [
        "//framework:go_default_library",
        "//framework/util:go_default_library",
        "//vendor/github.com/gin-gonic/gin:go_default_library",
        "//vendor/github.com/rs/zerolog:go_default_library",
        "//vendor/gopkg.in/urfave/cli.v1:go_default_library",
    ],
)
